--- a/document-types/drug_safety_update.html
+++ b/document-types/drug_safety_update.html
@@ -369,8 +369,8 @@
 <li><a href="https://www.gov.uk/drug-safety-update/off-label-or-unlicensed-use-of-medicines-prescribers-responsibilities">Off-label or unlicensed use of medicines: prescribers’ responsibilities</a></li>
 <li><a href="https://www.gov.uk/drug-safety-update/coronavirus-covid-19-new-dedicated-yellow-card-reporting-site-for-medicines-and-medical-devices">Coronavirus (COVID-19): new dedicated Yellow Card reporting site for medicines and medical devices</a></li>
 <li><a href="https://www.gov.uk/drug-safety-update/quinine-not-to-be-used-routinely-for-nocturnal-leg-cramps">Quinine: not to be used routinely for nocturnal leg cramps</a></li>
-<li><a href="https://www.gov.uk/drug-safety-update/the-black-triangle-scheme-or">The Black Triangle Scheme (▼ or ▼*)</a></li>
 <li><a href="https://www.gov.uk/drug-safety-update/bendamustine-levact-increased-risk-of-non-melanoma-skin-cancer-and-progressive-multifocal-encephalopathy-pml">Bendamustine (Levact): increased risk of non-melanoma skin cancer and progressive multifocal encephalopathy (PML)</a></li>
+<li><a href="https://www.gov.uk/drug-safety-update/fluoroquinolone-antibiotics-new-restrictions-and-precautions-for-use-due-to-very-rare-reports-of-disabling-and-potentially-long-lasting-or-irreversible-side-effects">Fluoroquinolone antibiotics: new restrictions and precautions for use due to very rare reports of disabling and potentially long-lasting or irreversible side effects </a></li>
 </ul>
 <p><a href="https://www.gov.uk/api/search.json?filter_content_store_document_type=drug_safety_update&amp;count=10">Source query from Search API</a></p>
 
