--- a/apps/collections/update-covid-local-restriction-data.html
+++ b/apps/collections/update-covid-local-restriction-data.html
@@ -653,6 +653,13 @@
         <div class="app-pane__content toc-open-disabled">
           <main id="content" class="technical-documentation" data-module="anchored-headings">
               <div class="govuk-!-font-size-16 govuk-!-margin-top-6">
+    <div class="govuk-warning-text">
+      <span class="govuk-warning-text__icon" aria-hidden="true">!</span>
+      <strong class="govuk-warning-text__text">
+        <span class="govuk-warning-text__assistive">Warning</span>
+        This document has not been updated for a while now. It may be out of date.
+      </strong>
+    </div>
 
   Last updated: <a href="https://github.com/alphagov/collections/commit/0e2bdbeb173af4de2c0350067fe3a2b067218764">23 Oct 2020</a>
 </div>
